about section added

--- a/style.css
+++ b/style.css
@@ -1,15 +1,4 @@
-/*-----------------------------------*\ 
-  #style.css
-\*-----------------------------------*/
-
-/**
- * copyright 2022 @codewithsadee 
- */
-
-/*-----------------------------------*\ 
-  #CUSTOM PROPERTY
-\*-----------------------------------*/
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap');
 .light-theme {
   /**
    * light theme colors 
@@ -584,6 +573,38 @@ footer .wrapper {
   text-align: center;
 }
 
+footer .education{
+}
+
+footer .title{
+  color: #ff7613;
+  font-weight: 700;
+  font-size: 1rem;
+  text-transform: uppercase;     
+}
+footer .eduItem{
+  margin-top: 2rem;
+}
+footer .careerItem{
+  margin-top: .5rem;
+}
+footer .preTitle{
+  font-size: .9rem;
+  color: white;
+  font-weight: 300;    
+}
+footer .itemTitle{
+  font-size: 1rem;
+  color: white;
+  font-weight: 500;
+  margin: 0.1rem 0;
+}
+footer .itemSubtitle{
+  font-size: 1rem;
+  color: white;
+  font-weight: 400; 
+}
+
 .footer-logo {
   margin-bottom: 10px;
 }
@@ -824,6 +845,7 @@ footer .wrapper {
     display: flex;
     gap: 30px;
   }
+  
 
   .desktop-nav {
     display: flex;
