forms response added

--- a/style.css
+++ b/style.css
@@ -1191,3 +1191,11 @@ footer .itemSubtitle{
     margin-bottom: 0.3rem;
   }
 }
+
+#msg{
+  color : var(--accent);
+  font-weight: 700;
+  margin-top: 10px;
+  display: block;
+
+}
